--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+docker==7.0.0
 gitdb==4.0.11
 GitPython==3.1.42
 idna==3.6
